--- a/app/views/auth/login.html.haml
+++ b/app/views/auth/login.html.haml
@@ -1,5 +1,5 @@
 %h1 Login
 = form_tag authenticate_auth_path do
-  = text_field_tag :email, :label => 'email'
-  = password_field_tag :password, :label => 'password'
+  = text_field_tag :email
+  = password_field_tag :password
   = submit_tag 'login'
