--- a/app/views/projects/_form.html.haml
+++ b/app/views/projects/_form.html.haml
@@ -12,5 +12,7 @@
   .field
     = f.label :url
     = f.text_field :url
+  .hidden
+    = f.hidden_field :user_id, :value => current_user.id
   .actions
     = f.submit 'Save'
