--- a/app/views/registrations/new.html.haml
+++ b/app/views/registrations/new.html.haml
@@ -1,5 +1,8 @@
 %h1 New registration
 
+- if @user.errors.present?
+  Registration failed. See errors below.
+
 = render 'form'
 
 = link_to 'Back', registrations_path
