--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,9 +1,15 @@
 body {
   background-color: #fff;
   color: #333;
-  font-family: verdana, arial, helvetica, sans-serif;
+  font-family: verdana, arial, sans-serif;
   font-size: 13px;
   line-height: 18px; }
+
+fieldset {
+  border: none; 
+  margin-left: 25px;
+  label {
+    padding-right: 15px; }}
 
 p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
