Cleaning up some navigation links for newcomers

--- a/app/views/auth/login.html.haml
+++ b/app/views/auth/login.html.haml
@@ -3,3 +3,4 @@
   = text_field_tag :email
   = password_field_tag :password
   = submit_tag 'login'
+= link_to "click here to register", new_registration_path
